# block-io-viz

./: .gitignore  Cargo.toml  README.md
block-io-viz/: Cargo.toml
block-io-viz-common/: Cargo.toml
block-io-viz-common/src/: lib.rs
block-io-viz-ebpf/: Cargo.toml
block-io-viz-ebpf/src/: main.rs  request.rs
block-io-viz-webapp/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
block-io-viz-webapp/css/: styles.css
block-io-viz-webapp/src/: index.ts
block-io-viz/src/: block.rs  bpf.rs  main.rs  static_webserver.rs  webserver.rs  websocket_server.rs
block-io-viz/static/: app.js  index.html
xtask/src/: build_ebpf.rs  build_webpack.rs  main.rs  run.rs  webpack.rs
