[package]
name = "block-io-viz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
block-io-viz-common = { path = "../block-io-viz-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
tokio-tungstenite = "0.*"
futures-util = "0.*"
rmp-serde = "1.*"
axum = "0.*"

[[bin]]
name = "block-io-viz"
path = "src/main.rs"
