[package]
name = "block-io-viz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = "0.*"
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
block-io-viz-common = { path = "../block-io-viz-common", features = ["user"] }
caps = "0.*"
libc = "0.2"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10"
futures-util = "0.*"
log = "0.4"
rmp-serde = "1.*"
serde = {version = "1.*", features = ["derive"]}
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
tokio-tungstenite = "0.*"

[[bin]]
name = "block-io-viz"
path = "src/main.rs"
